--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <title>Cindy Donch's Portfolio</title>
+        <link href="style.css" rel="stylesheet" type="text/css">
+        <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
+    </head>
+    <body>
+        <div class = "navigation">
+            <ul class = "link">
+                <li><a href = "index.html">Home</a></li>
+                <li><a href = "#">Resume</a></li>
+                <li><a href = "#">Education</a></li>
+                <li><a href = "#">Personal</a></li>
+            </ul>
+        </div>
+        <div class = "header"><h1>Cindy Donch</h1></div>
+        <h2>About Me</h2>
+        <p>
+            I am a second year Computer Science major studying at RIT. I am planning on minoring in Math and Game Design and Development. 
+        </p> 
+        <p>
+            I have only recently started my journey into web development. I started off learning independently through the w3schools website. I then took a web development class at RIT and excelled in the class, taking quickly to the topics introduced. In this class we focused on frontend development of websites using HTML, CSS, and javascript. 
+        </p>
+        <p>
+            Currently I am learning more on backend web development through the Software Engineering course I am taking at RIT. This course is based off of a semester long group project to make a web application called WebCheckers. In this project we are using Java, JavaScript, and the FreeMarker template to create the target application.
+        </p>
+    </body>
+
+</html>
